src/ReservationForm.scss
@import "index.scss";

.reservation_form {
		background: #F8FAFC;
		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
		border-radius: 24px;
		
		padding: 2rem;
		@include sm {
				padding: 4rem;
		}

		max-width: 800px;

		&__heading {
				display: flex;
				flex-direction: column;

				&__title {
						margin: 0;
						color: #1E293B;
				}
		}
}

.selector {
		&__title {
				font-size: 1.2rem;
				display: flex;
				align-items: center;
				gap: 0.5rem;
				color: #1E293B;
				&__icon {
						color: #475569;
				}
				margin-bottom: 0.5rem;
		}

		&__options {
				display: flex;
				gap: 1rem;
				&--longer {
						flex-direction: column;
				}
		}
		margin-bottom: 2rem;

}

.choose {
		user-select: none;
		.choose__button {
				cursor: pointer;
				background: #FEFEFE;
				box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
				border-radius: 8px;
				color: #374151;
				font-weight: bold;
				display: flex;

				&--selected {
						box-shadow: none;
						background-color: #059669;
						color: #ecfdf5;

						.choose__button__modifier {
								display: none;
						}
				}

				&--disabled {
						box-shadow: none;
						background-color: #cbd5e1;
						color: #334155;

						.choose__button__modifier {
								display: none;
						}
				}

				padding: 1rem;


				&__left {
						flex-grow: 1;
				}

				&__modifier {
						font-weight: normal;
						flex-grow: 0;
						&--error {
								color: #9F0000;
						}

						&--success {
								color: #059669;
						}
				}
		}
}

.button {
		cursor: pointer;
		background-color: #1E293B;
		border-radius: 8px;

		text-align: center;
		font-weight: bold;
		color: #F8FAFC;
		padding: 1rem;
		display: inline-flex;
		gap: 0.5rem;
		align-items: center;

		&--disabled {
				background-color: #64748b;
		}
}

.reservation_form__submission {
		margin-top: 2rem;
		display: flex;
		flex-direction: column;
		align-items: flex-end;
		gap: 0.5rem;
}

.slots {
		display: flex;
		flex-direction: column;
		gap: 1rem;
}

.slot {
		padding:0;
		background-color:white; 
		border-radius: 8px;

		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

		&__tutor_info {
				display: flex;
				flex-direction: row;
				padding: 1rem;
				padding-bottom: 0; //because of b.s. alignment hack
				gap: 1rem;

				&__image {
						width: 100px;
						height: 100px;
						clip-path: circle(50%);
						&--alignmentHack {
								visibility: hidden;
						}
				}

				&__bio {
						display:flex;
						flex-direction: column;
						align-items: flex-start;
						justify-content: center;

						&__name {
								display: flex;
								flex-direction: column;
								justify-content: flex-end;
								font-weight: bold;
						}

						&__qualification {
								color: #334155;
						}

						&__see_more {
								color: #334155;
								font-weight: lighter;
								cursor: pointer;
								padding-top: 0;
								margin-top: 0;
								font-size: 0.75rem;
						}

						&__extended_qualification {
								@include md {
										max-width: 70%;
								}
						}
				}
		}

		&__slot_info {
				background-color: #F1F5F9;
				margin:0;
				margin-top: 1rem; //because of b.s. alignment hack
				padding: 1rem;
				border-bottom-left-radius: 8px;
				border-bottom-right-radius: 8px;
				display: flex;
				align-items: baseline;

				&__booking_button {
						padding: 0.25rem;
						padding-left: 1rem;
						padding-right: 1rem;
				}
				
				&__schedule {
						flex-grow: 1;
				}
		}
}

